[package]
name = "os"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true
opt-level = 0

[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
buddy_system_allocator = "0.9.0"
bitflags = "1.2.1"
xmas-elf = "0.9.0"
