[package]
name = "os"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
buddy_system_allocator = "0.9.0"
bitflags = "2.2.1"
xmas-elf = "0.9.0"
sbi-rt = { version = "0.0.2", features = ["legacy"] }
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "4ee80e5" }
easyfs = { path = "../easy-fs" }
log = "0.4"